// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sassOptions option should ignore the "data" option ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "data" option ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "data" option ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should ignore the "data" option ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "data" option ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "data" option ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should ignore the "data" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "data" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "data" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should ignore the "data" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "data" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "data" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should ignore the "data" option ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "data" option ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "data" option ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should ignore the "data" option ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "data" option ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "data" option ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should ignore the "data" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "data" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "data" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should ignore the "data" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "data" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "data" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "url" option ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "url" option ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "url" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "url" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "url" option ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "url" option ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "url" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should ignore the "url" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should ignore the "url" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should respect the "style" option ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should respect the "style" option ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should respect the "style" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should respect the "style" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should respect the "style" option ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should respect the "style" option ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should respect the "style" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should respect the "style" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should respect the "style" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `"﻿@import"./file.css";body{font:100% Helvetica,sans-serif;color:#333}nav ul{margin:0;padding:0;list-style:none}nav li{display:inline-block}nav a{display:block;padding:6px 12px;text-decoration:none}.box{-webkit-border-radius:10px;-moz-border-radius:10px;-ms-border-radius:10px;border-radius:10px}.message,.warning,.error,.success{border:1px solid #ccc;padding:10px;color:#333}.success{border-color:green}.error{border-color:red}.warning{border-color:#ff0}.foo:before{content:""}.bar:before{content:"∑"}"`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `"﻿@import"./file.css";body{font:100% Helvetica,sans-serif;color:#333}nav ul{margin:0;padding:0;list-style:none}nav li{display:inline-block}nav a{display:block;padding:6px 12px;text-decoration:none}.box{-webkit-border-radius:10px;-moz-border-radius:10px;-ms-border-radius:10px;border-radius:10px}.foo:before{content:""}.bar:before{content:"∑"}"`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('dart-sass', 'modern-compiler' API, 'sass' syntax): css 1`] = `"﻿@import"./file.css";body{font:100% Helvetica,sans-serif;color:#333}nav ul{margin:0;padding:0;list-style:none}nav li{display:inline-block}nav a{display:block;padding:6px 12px;text-decoration:none}.box{-webkit-border-radius:10px;-moz-border-radius:10px;-ms-border-radius:10px;border-radius:10px}.message,.warning,.error,.success{border:1px solid #ccc;padding:10px;color:#333}.success{border-color:green}.error{border-color:red}.warning{border-color:#ff0}.foo:before{content:""}.bar:before{content:"∑"}"`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('dart-sass', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('dart-sass', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('dart-sass', 'modern-compiler' API, 'scss' syntax): css 1`] = `"﻿@import"./file.css";body{font:100% Helvetica,sans-serif;color:#333}nav ul{margin:0;padding:0;list-style:none}nav li{display:inline-block}nav a{display:block;padding:6px 12px;text-decoration:none}.box{-webkit-border-radius:10px;-moz-border-radius:10px;-ms-border-radius:10px;border-radius:10px}.foo:before{content:""}.bar:before{content:"∑"}"`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('dart-sass', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('dart-sass', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `"@import"./file.css";body{font:100% Helvetica,sans-serif;color:#333}nav ul{margin:0;padding:0;list-style:none}nav li{display:inline-block}nav a{display:block;padding:6px 12px;text-decoration:none}.box{-webkit-border-radius:10px;-moz-border-radius:10px;-ms-border-radius:10px;border-radius:10px}.message,.warning,.error,.success{border:1px solid #ccc;padding:10px;color:#333}.success{border-color:green}.error{border-color:red}.warning{border-color:#ff0}.foo:before{content:""}.bar:before{content:"∑"}"`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `"@import"./file.css";body{font:100% Helvetica,sans-serif;color:#333}nav ul{margin:0;padding:0;list-style:none}nav li{display:inline-block}nav a{display:block;padding:6px 12px;text-decoration:none}.box{-webkit-border-radius:10px;-moz-border-radius:10px;-ms-border-radius:10px;border-radius:10px}.foo:before{content:""}.bar:before{content:"∑"}"`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('sass-embedded', 'modern-compiler' API, 'sass' syntax): css 1`] = `"@import"./file.css";body{font:100% Helvetica,sans-serif;color:#333}nav ul{margin:0;padding:0;list-style:none}nav li{display:inline-block}nav a{display:block;padding:6px 12px;text-decoration:none}.box{-webkit-border-radius:10px;-moz-border-radius:10px;-ms-border-radius:10px;border-radius:10px}.message,.warning,.error,.success{border:1px solid #ccc;padding:10px;color:#333}.success{border-color:green}.error{border-color:red}.warning{border-color:#ff0}.foo:before{content:""}.bar:before{content:"∑"}"`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('sass-embedded', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('sass-embedded', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('sass-embedded', 'modern-compiler' API, 'scss' syntax): css 1`] = `"@import"./file.css";body{font:100% Helvetica,sans-serif;color:#333}nav ul{margin:0;padding:0;list-style:none}nav li{display:inline-block}nav a{display:block;padding:6px 12px;text-decoration:none}.box{-webkit-border-radius:10px;-moz-border-radius:10px;-ms-border-radius:10px;border-radius:10px}.foo:before{content:""}.bar:before{content:"∑"}"`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('sass-embedded', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should use "compressed" output style in the "production" mode ('sass-embedded', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option is empty "Object" ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option is empty "Object" ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('dart-sass', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option is empty "Object" ('dart-sass', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('dart-sass', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('dart-sass', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option is empty "Object" ('dart-sass', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('dart-sass', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option is empty "Object" ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option is empty "Object" ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('sass-embedded', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option is empty "Object" ('sass-embedded', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('sass-embedded', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('sass-embedded', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option is empty "Object" ('sass-embedded', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option is empty "Object" ('sass-embedded', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('dart-sass', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" ('dart-sass', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('dart-sass', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('dart-sass', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" ('dart-sass', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('dart-sass', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('sass-embedded', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" ('sass-embedded', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('sass-embedded', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('sass-embedded', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" ('sass-embedded', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" ('sass-embedded', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" and never return ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" and never return ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('dart-sass', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" and never return ('dart-sass', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('dart-sass', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('dart-sass', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" and never return ('dart-sass', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('dart-sass', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" and never return ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" and never return ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('sass-embedded', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" and never return ('sass-embedded', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('sass-embedded', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('sass-embedded', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Function" and never return ('sass-embedded', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Function" and never return ('sass-embedded', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Object" ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Object" ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('dart-sass', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Object" ('dart-sass', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('dart-sass', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('dart-sass', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Object" ('dart-sass', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('dart-sass', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Object" ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Object" ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('sass-embedded', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Object" ('sass-embedded', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('sass-embedded', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('sass-embedded', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work when the option like "Object" ('sass-embedded', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work when the option like "Object" ('sass-embedded', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('dart-sass', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('dart-sass', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('dart-sass', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('dart-sass', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('sass-embedded', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('sass-embedded', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('sass-embedded', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with custom scheme import ('sass-embedded', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `
[
  "ModuleBuildError: Module build failed (from ../src/cjs.js):
Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.",
]
`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `
[
  "ModuleBuildError: Module build failed (from ../src/cjs.js):
Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.",
]
`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): errors 1`] = `
[
  "ModuleBuildError: Module build failed (from ../src/cjs.js):
Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.",
]
`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): errors 1`] = `
[
  "ModuleBuildError: Module build failed (from ../src/cjs.js):
Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.",
]
`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `
[
  "ModuleBuildError: Module build failed (from ../src/cjs.js):
Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.",
]
`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `
[
  "ModuleBuildError: Module build failed (from ../src/cjs.js):
Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.",
]
`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): errors 1`] = `
[
  "ModuleBuildError: Module build failed (from ../src/cjs.js):
Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.",
]
`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): errors 1`] = `
[
  "ModuleBuildError: Module build failed (from ../src/cjs.js):
Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.",
]
`;

exports[`sassOptions option should work with the "fatalDeprecations" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"h1 {
  font-size: 32px;
}"
`;

exports[`sassOptions option should work with the "functions" option ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"h1 {
  font-size: 32px;
}"
`;

exports[`sassOptions option should work with the "functions" option ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"h1 {
  font-size: 32px;
}"
`;

exports[`sassOptions option should work with the "functions" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"h1 {
  font-size: 32px;
}"
`;

exports[`sassOptions option should work with the "functions" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"h1 {
  font-size: 32px;
}"
`;

exports[`sassOptions option should work with the "functions" option ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"h1 {
  font-size: 32px;
}"
`;

exports[`sassOptions option should work with the "functions" option ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"h1 {
  font-size: 32px;
}"
`;

exports[`sassOptions option should work with the "functions" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"h1 {
  font-size: 32px;
}"
`;

exports[`sassOptions option should work with the "functions" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "functions" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "indentWidth" option ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "indentWidth" option ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "indentWidth" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "indentWidth" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "indentWidth" option ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "indentWidth" option ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "indentWidth" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "indentWidth" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "indentWidth" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "linefeed" option ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "linefeed" option ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "linefeed" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "linefeed" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "linefeed" option ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "linefeed" option ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "linefeed" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "linefeed" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "linefeed" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
".include-path-module {
  background: hotpink;
}

._underscore-include-path-module {
  background: hotpink;
}"
`;

exports[`sassOptions option should work with the "loadPaths" option ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
".include-path-module {
  background: hotpink;
}

._underscore-include-path-module {
  background: hotpink;
}"
`;

exports[`sassOptions option should work with the "loadPaths" option ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): css 1`] = `
".include-path-module {
  background: hotpink;
}

._underscore-include-path-module {
  background: hotpink;
}"
`;

exports[`sassOptions option should work with the "loadPaths" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): css 1`] = `
".include-path-module {
  background: hotpink;
}

._underscore-include-path-module {
  background: hotpink;
}"
`;

exports[`sassOptions option should work with the "loadPaths" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
".include-path-module {
  background: hotpink;
}

._underscore-include-path-module {
  background: hotpink;
}"
`;

exports[`sassOptions option should work with the "loadPaths" option ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
".include-path-module {
  background: hotpink;
}

._underscore-include-path-module {
  background: hotpink;
}"
`;

exports[`sassOptions option should work with the "loadPaths" option ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): css 1`] = `
".include-path-module {
  background: hotpink;
}

._underscore-include-path-module {
  background: hotpink;
}"
`;

exports[`sassOptions option should work with the "loadPaths" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): css 1`] = `
".include-path-module {
  background: hotpink;
}

._underscore-include-path-module {
  background: hotpink;
}"
`;

exports[`sassOptions option should work with the "loadPaths" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "loadPaths" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "syntax" option ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "syntax" option ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "syntax" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('dart-sass', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "syntax" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('dart-sass', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "syntax" option ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "syntax" option ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "syntax" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('sass-embedded', 'modern-compiler' API, 'sass' syntax): warnings 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): css 1`] = `
"@charset "UTF-8";
@import "./file.css";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: "\\e0c6";
}

.bar:before {
  content: "∑";
}"
`;

exports[`sassOptions option should work with the "syntax" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): errors 1`] = `[]`;

exports[`sassOptions option should work with the "syntax" option ('sass-embedded', 'modern-compiler' API, 'scss' syntax): warnings 1`] = `[]`;
